--- a/Interfaces/agregarYEditarVentas/CSS/styleVentas.css
+++ b/Interfaces/agregarYEditarVentas/CSS/styleVentas.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Object Sans";
-  src: url(/FONT/ObjectSans-Regular.otf);
+  src: url(FONT/ObjectSans-Regular.otf);
 }
 
 body {
